# airfare-streamlit-public

./: README.md  airport_data_processing.ipynb  pyproject.toml  requirements.txt
app/: main.py  predict_nohops.py  predict_nohops_return.py  predict_withhops.py
app/models/: sets.py
models/: airport_names.csv  distance_data.csv  distance_data.json  names_data.json  nicholas_mlbCabinCode.joblib  nicholas_neuralnetwork_best.keras  pine_xgb_pipeline_final.joblib  travel_duration_data.csv  travel_duration_data.json
